Finishing the xgboost feature...

--- a/config.cfg
+++ b/config.cfg
@@ -1,5 +1,5 @@
 ROOT_DIR=/home/jr453/Documents/Projects/Reem_16s_RNA_classification/16S_iTransformer
-VERBOSE=False
+VERBOSE=True
 LABEL=singlelabel
 LEVELS=['species']
 FNAME=silva_species
